generating the documentation

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,14 +2,22 @@ version: 2
 
 models:
   - name: stg_customers
+    description: One unique customer per row
     columns: 
       - name: customer_id
+        description: Primary key for stg_customer
         tests:
           - unique
           - not_null
 
   - name: stg_orders
-    columns: 
+    description: Staged order data from our jaffle shop app.
+    columns:
+      - name: order_id
+        description: Primary key for orders.
+        tests:
+          - unique
+          - not_null 
       - name: status
         tests:
           - accepted_values:
@@ -19,3 +27,19 @@ models:
                 - returned
                 - placed
                 - return_pending
+      - name: customer_id
+        tests:
+          - relationships:
+              to:  ref('stg_customers')
+              field: customer_id
+  - name: stg_payments
+    columns:
+      - name: payment_id
+        tests:
+          - unique
+          - not_null
+      - name: order_id
+        tests:
+          - relationships:
+              to:  ref('stg_orders')
+              field: order_id
