--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -5,4 +5,9 @@ sources:
     database: raw
     tables: 
       - name: customers
+
       - name: orders
+        loaded_at_field: _ETL_LOADED_AT
+        freshness: 
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 22, period: hour}
